fern/versions/v0.4.0/pages/api-reference/index.mdx
---
title: "API Reference"
description: "Auto-generated Python API reference for the nemo_gym library."
---

Auto-generated reference documentation for the `nemo_gym` Python package.

This reference is built from docstrings in the [source code](https://github.com/NVIDIA-NeMo/Gym/tree/main/nemo_gym). Browse the sidebar to explore modules, classes, and functions.

## Key Modules

| Module | Description |
|--------|-------------|
| `nemo_gym.base_resources_server` | Base classes for building resources servers (`SimpleResourcesServer`, `BaseVerifyRequest`, `BaseVerifyResponse`) |
| `nemo_gym.base_responses_api_agent` | Base classes for building agent servers (`SimpleResponsesAPIAgent`) |
| `nemo_gym.base_responses_api_model` | Base classes for building model servers (`SimpleResponsesAPIModel`) |
| `nemo_gym.config_types` | Pydantic configuration models for servers, datasets, and CLI |
| `nemo_gym.server_utils` | Server utilities, HTTP client, and middleware |
| `nemo_gym.openai_utils` | OpenAI API client wrapper |
| `nemo_gym.sandbox` | Provider-neutral sandbox API for isolated command execution and file transfer |
